# solana-agent-rs

./: .gitignore  Cargo.toml  PRIVACY_P2P_PLAN.md  README.md  SECURITY_MODEL.md  config.json  heartbeat.md  skill.md
benches/: tor_spike_bench.rs
migrations/20250129_create_memory/: down.sql  up.sql
migrations/20260202_create_plans/: down.sql  up.sql
migrations/20260202_create_todos/: down.sql  up.sql
migrations/20260203_create_tasks/: down.sql  up.sql
src/: candle_vllm.rs  client.rs  config.rs  config_store.rs  daemon.rs  db.rs  error.rs  lib.rs  main.rs  sqlcipher.rs  tor_spike.rs  ui.rs
src/brain/: manager.rs
src/brain/plugins/: defaults.rs  mod.rs
src/domains/: agent.rs  message.rs  mod.rs
src/e2e/: identity_store.rs  manager.rs  mod.rs  trust_store.rs
src/factories/: agent_factory.rs
src/guardrails/: pii.rs
src/interfaces/: mod.rs  plugins.rs  providers.rs  services.rs  transport.rs
src/planning/: mod.rs  schema.rs
src/plugins/: manager.rs  mod.rs  registry.rs
src/providers/: candle_vllm.rs  memory.rs  mod.rs  mongodb.rs  openai.rs  sqlite.rs
src/providers/sqlite/: schema.rs
src/reminders/: mod.rs
src/services/: agent.rs  daemon_client.rs  gossip.rs  mod.rs  query.rs  routing.rs  transport.rs
src/tasks/: mod.rs  schema.rs
src/todo/: mod.rs  schema.rs
src/tools/: coding.rs  github.rs  http_call.rs  mcp.rs  mod.rs  planning.rs  reminders.rs  tasks.rs  todo.rs
src/wakeup/: mod.rs
tests/: agent_service.rs  brain_plugins_ported.rs  brain_scheduler.rs  config_factory.rs  coverage.rs  daemon.rs  e2e.rs  guardrails.rs  memory_provider.rs  memory_summarization.rs  openai_provider.rs  plugins.rs  query_service.rs  sqlcipher.rs  tor_spike.rs  trust_store.rs
tests/common/: mod.rs
