[package]
name = "butterfly-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobins = false

[lib]
name = "butterfly_bot"
path = "src/lib.rs"

[[bin]]
name = "butterfly-bot"
path = "src/main.rs"

[[bin]]
name = "butterfly-botd"
path = "src/bin/butterfly-botd.rs"

[[bin]]
name = "butterfly-bot-ui"
path = "src/bin/butterfly-bot-ui.rs"

[[bin]]
name = "butterfly-bot-tor-spike"
path = "src/bin/butterfly-bot-tor-spike.rs"

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "tor_spike_bench"
harness = false

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
async-openai = { version = "0.32.4", features = ["chat-completion", "audio", "embedding"] }
arti-client = { version = "0.38.0", features = ["onion-service-client"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand_core = "0.6"
x25519-dalek = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
regex = "1.11"
once_cell = "1.19"
console = "0.15"
diesel = { version = "2.2", features = ["sqlite"] }
diesel-async = { version = "0.7.4", features = ["sqlite", "bb8", "tokio"] }
diesel_migrations = "2.2"
lancedb = "0.23.1"
arrow-array = "56.2"
arrow-schema = "56.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tor-rtcompat = "0.38.0"
urlencoding = "2.1"
pulldown-cmark = "0.12"
pulldown-cmark-mdcat = "2.7"
syntect = "5.3"
keyring = { version = "3.6", features = ["sync-secret-service"] }
libsqlite3-sys = { version = "0.35", features = ["bundled-sqlcipher"] }
axum = "0.7"
bytes = "1.7"
sha2 = "0.10"
notify-rust = "4.11"
dioxus = { version = "0.7.3", features = ["desktop"] }
time = { version = "0.3", features = ["formatting", "macros"] }
lru = "0.12"

[features]
default = []

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.10"
tower = "0.5"
http-body-util = "0.1"
criterion = "0.5"
