[package]
name = "butterfly-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobins = false

[lib]
name = "butterfly_bot"
path = "src/lib.rs"

[[bin]]
name = "butterfly-bot"
path = "src/main.rs"

[[bin]]
name = "butterfly-botd"
path = "src/bin/butterfly-botd.rs"

[[bin]]
name = "butterfly-bot-ui"
path = "src/bin/butterfly-bot-ui.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
async-openai = { version = "0.32.4", features = ["chat-completion", "audio", "embedding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
regex = "1.11"
once_cell = "1.19"
console = "0.15"
diesel = { version = "2.2", features = ["sqlite"] }
diesel-async = { version = "0.7.4", features = ["sqlite", "bb8", "tokio"] }
diesel_migrations = "2.2"
lancedb = "0.23.1"
arrow-array = "56.2"
arrow-schema = "56.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
pulldown-cmark = "0.12"
pulldown-cmark-mdcat = "2.7"
syntect = "5.3"
keyring = { version = "3.6", features = ["sync-secret-service"] }
axum = "0.7"
bytes = "1.7"
sha2 = "0.10"
notify-rust = "4.11"
dioxus = { version = "0.7.3", features = ["desktop"] }
time = { version = "0.3", features = ["formatting", "macros"] }
lru = "0.12"
rust-mcp-sdk = "0.8.3"
rust-mcp-transport = "0.8.0"

[features]
default = []

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.10"
tower = "0.5"
http-body-util = "0.1"
criterion = "0.5"
